final changes and new gifs

--- a/html/artisticparrot.html
+++ b/html/artisticparrot.html
@@ -14,7 +14,6 @@
     <link href="../css/animate.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- neue haas text font from Adobe-->
-    <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- neue haas display thin font from Adobe-->
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- swear black display ciati font from Adobe-->
 
     <link rel="shortcut icon" href="../img/star.png">
@@ -41,6 +40,18 @@
                     <h2>Artisticparrot Branding (2022)</h2>
                     <p>Creation of multi-platform visual brand identity for personal ceramics business using traditional
                         illustration and Adobe Illustrator</p>
+
+                        <div class="project-overview-wrapper">
+                            <div class="project-overview-box">
+                                    <h5 class="project-overview-item small-margin-right">context</h5>
+                                    <p class="p1 project-overview-item medium-margin-right">personal</p>
+                            </div>
+    
+                            <div class="project-overview-box">
+                                    <h5 class="project-overview-item small-margin-right">role</h5>
+                                    <p class="p1 project-overview-item">visual design, art direction, brand identity</p>
+                            </div>
+                        </div>
                 </div>
 
                 <div class="image-box">
