--- a/html/between-dreams.html
+++ b/html/between-dreams.html
@@ -14,7 +14,6 @@
     <link href="../css/animate.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- neue haas text font from Adobe-->
-    <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- neue haas display thin font from Adobe-->
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- swear black display ciati font from Adobe-->
 
     <link rel="shortcut icon" href="../img/star.png">
@@ -42,6 +41,19 @@
                     <p>Graphic/interaction design course project exploring creation of visual identity, and cross-medium
                         application to assets and
                         microsite prototype using Figma</p>
+
+                    <div class="project-overview-wrapper">
+                        <div class="project-overview-box">
+                            <h5 class="project-overview-item small-margin-right">context</h5>
+                            <p class="p1 project-overview-item medium-margin-right">academic</p>
+                        </div>
+
+                        <div class="project-overview-box">
+                            <h5 class="project-overview-item small-margin-right">role</h5>
+                            <p class="p1 project-overview-item">visual design, art direction, content strategy</p>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="image-box">
@@ -57,15 +69,17 @@
                 <section> <!-- project description -->
                     <h4>outcome</h4>
                     <p> This project was centered around learning art direction and interaction design, and creating a
-                        graphic visual identity to iterate into a microsite prototype for a cultural arts client. Our
+                        visual identity to iterate into a microsite prototype for a cultural arts client. The
                         microsite accompanies an art exhibition of tapestries telling the story of dreamlike
-                        hallucinations experienced by the artist. The site walks users through the narrative, materials,
+                        hallucinations experienced by the artist and walks users through the narrative, materials,
                         and
                         processes used to create the tapestries, enhancing understanding and appreciation while
                         conveying
                         their eerie and surreal themes. The full tapestries are never shown, opting instead for
                         close-ups of
-                        tapestry details, encouraging viewers to visit the exhibition to see the works in full.</p>
+                        tapestry details, encouraging viewers to visit the exhibition to see the works in full. I did
+                        most
+                        of the visual design, content strategy and prototyping for this project. </p>
                 </section>
             </div>
 
