--- a/html/artisticparrot.html
+++ b/html/artisticparrot.html
@@ -41,17 +41,17 @@
                     <p>Creation of multi-platform visual brand identity for personal ceramics business using traditional
                         illustration and Adobe Illustrator</p>
 
-                        <div class="project-overview-wrapper">
-                            <div class="project-overview-box">
-                                    <h5 class="project-overview-item small-margin-right">context</h5>
-                                    <p class="p1 project-overview-item medium-margin-right">personal</p>
-                            </div>
-    
-                            <div class="project-overview-box">
-                                    <h5 class="project-overview-item small-margin-right">role</h5>
-                                    <p class="p1 project-overview-item">visual design, art direction, brand identity</p>
-                            </div>
+                    <div class="project-overview-wrapper">
+                        <div class="project-overview-box">
+                            <h5 class="project-overview-item small-margin-right">context</h5>
+                            <p class="p1 project-overview-item medium-margin-right">personal</p>
                         </div>
+
+                        <div class="project-overview-box">
+                            <h5 class="project-overview-item small-margin-right">role</h5>
+                            <p class="p1 project-overview-item">visual design, art direction, brand identity</p>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="image-box">
@@ -178,11 +178,11 @@
 
         <footer>
             <!-- back to top/back home links -->
-            <nav class="box-project">
+            <div class="box-project">
                 <a href="../html/artisticparrot.html" class="box-project small-margin-bottom padding-right">back to
                     top</a>
                 <a href="../index.html" class="box-project small-margin-bottom">back home</a>
-            </nav>
+            </div>
 
             <!-- more projects -->
             <div class="box-project footer-spacing">
@@ -200,8 +200,13 @@
             </div>
 
             <!-- copyright thing -->
-            <div class="box-footer-project medium-margin-bottom">
-                <a href="../html/styleguide.html">styleguide</a>
+            <div class="box-footer medium-margin-bottom">
+                <div class="box-header">
+                    <a class="box-header small-margin-bottom padding-right"
+                        href="../html/styleguide.html">styleguide</a>
+                    <a class="box-header small-margin-bottom" href="https://github.com/oliviasteeed/339P3">github
+                        repository</a>
+                </div>
                 <p>*artist, designer, maker of things</p>
                 <p class="p1">©olivia steed 2023</p>
             </div>
