--- a/html/styleguide.html
+++ b/html/styleguide.html
@@ -432,11 +432,11 @@
         <footer>
 
             <!-- back to top/back home links -->
-            <nav class="box-header">
+            <div class="box-header">
                 <a href="../html/styleguide.html" class="box-header small-margin-bottom padding-right">back to
                     top</a>
                 <a href="../index.html" class="box-header small-margin-bottom">back home</a>
-            </nav>
+            </div>
 
             <!-- more projects -->
             <div class="box-project footer-spacing">
@@ -455,11 +455,14 @@
                         <p class="p1">web and print brand identity</p>
                     </div>
                 </div>
-
             </div>
 
             <!-- copyright thing -->
-            <div class="box-footer-project medium-margin-bottom">
+            <div class="box-footer medium-margin-bottom">
+                <div class="box-header">
+                    <a class="box-header small-margin-bottom padding-right" href="../html/styleguide.html">styleguide</a>
+                    <a class="box-header small-margin-bottom" href="https://github.com/oliviasteeed/339P3">github repository</a>
+                </div>
                 <p>*artist, designer, maker of things</p>
                 <p class="p1">©olivia steed 2023</p>
             </div>
