--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
         <footer>
 
             <!-- copyright thing -->
-            <div class="box-footer-project medium-margin-bottom">
-                <a href="html/styleguide.html">styleguide</a>
+            <div class="box-footer medium-margin-bottom">
+                <div class="box-header">
+                    <a class="box-header small-margin-bottom padding-right" href="html/styleguide.html">styleguide</a>
+                    <a class="box-header small-margin-bottom" href="https://github.com/oliviasteeed/339P3">github repository</a>
+                </div>
                 <p>*artist, designer, maker of things</p>
                 <p class="p1">©olivia steed 2023</p>
             </div>
