--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <title>olivia steed</title>
 
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/flexbox.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
