smaller links/citations page

--- a/html/artisticparrot.html
+++ b/html/artisticparrot.html
@@ -180,9 +180,9 @@
         <footer>
             <!-- back to top/back home links -->
             <div class="box-project">
-                <a href="../html/artisticparrot.html" class="box-project small-margin-bottom padding-right">back to
+                <a href="../html/artisticparrot.html" class="small-link box-project small-margin-bottom padding-right">back to
                     top</a>
-                <a href="../index.html" class="box-project small-margin-bottom">back home</a>
+                <a href="../index.html" class="small-link box-project small-margin-bottom">back home</a>
             </div>
 
             <!-- more projects -->
@@ -203,13 +203,14 @@
             <!-- copyright thing -->
             <div class="box-footer medium-margin-bottom">
                 <div class="box-header">
-                    <a class="box-header small-margin-bottom padding-right"
-                        href="../html/styleguide.html">styleguide</a>
-                    <a class="box-header small-margin-bottom" href="https://github.com/oliviasteeed/339P3">github
+                    <a class="small-link box-header small-margin-bottom padding-right" href="../html/styleguide.html">styleguide</a>
+
+                    <a class="small-link box-header small-margin-bottom padding-right" href="../html/citations.html">citations</a>
+
+                    <a class="small-link box-header small-margin-bottom" href="https://github.com/oliviasteeed/339P3">github
                         repository</a>
                 </div>
-                <p>*artist, designer, maker of things</p>
-                <p class="p1">©olivia steed 2023</p>
+                <p class="p1">olivia steed 2023</p>
             </div>
         </footer>
 
