--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
             <section> <!-- bio/introduction -->
                 <div class="section-container">
                     <h3>My name is Olivia and I like making pretty things. My strengths are visual design, illustration
-                        and art direction which I apply to create distinct and cohesive visual identities. I’m currently in my
-                        third year of studies at SFU’s <em>School of Interactive Arts and Technology</em> and am interested in creating unified visual experiences.</h3>
+                        and art direction which I apply to create distinct and cohesive visual identities. I’m currently
+                        in my
+                        third year of studies at SFU’s <em>School of Interactive Arts and Technology</em> and am
+                        interested in creating unified visual experiences.</h3>
                 </div>
 
 
@@ -81,11 +83,13 @@
             <!-- copyright thing -->
             <div class="box-footer medium-margin-bottom">
                 <div class="box-header">
-                    <a class="box-header small-margin-bottom padding-right" href="html/styleguide.html">styleguide</a>
-                    <a class="box-header small-margin-bottom" href="https://github.com/oliviasteeed/339P3">github repository</a>
+                    <a class="small-link box-header small-margin-bottom padding-right" href="html/styleguide.html">styleguide</a>
+
+                    <a class="small-link box-header small-margin-bottom padding-right" href="html/citations.html">citations</a>
+
+                    <a class="small-link box-header small-margin-bottom" href="https://github.com/oliviasteeed/339P3">github repository</a>
                 </div>
-                <p>*artist, designer, maker of things</p>
-                <p class="p1">©olivia steed 2023</p>
+                <p class="p1">olivia steed 2023</p>
             </div>
 
 
